Gut the README.md